<resources>
    <string name="app_name">Check fuel</string>
    <string name="refueling">Refueling</string>
    <string name="curent_use">Current use</string>
    <string name="quality_score">Quality score</string>
    <string name="usage_statistic">Usage statistic</string>
    <string name="choose_the_gas_station">Choose the gas station</string>
    <string name="the_density_of_this_fuel">The density of this fuel</string>
    <string name="should_be_within_this_range">should be within this range</string>
    <string name="this_is_density_of_your_fuel">This is density of your fuel</string>
    <string name="go_home">Go home</string>
    <string name="a_95_euro">A-95 EURO</string>
    <string name="fill_in">FILL IN</string>
    <string name="gasoline_volume">GASOLINE VOLUME</string>
    <string name="check_fuel">Check Fuel</string>
    <string name="okko">OKKO</string>
    <string name="choose_the_fuel_from">Choose the fuel from</string>
    <string name="pulls_95">pulls-95</string>
    <string name="_95">А-95 ЄВРО</string>
    <string name="_92">А-92 ЄВРО</string>
    <string name="gas">ГАЗ</string>
    <string name="you_loose_ml">You loose ml</string>
    <string name="percent">%</string>
    <string name="expected_volume">Expected volume</string>
    <string name="ml">0.0 liters</string>
    <string name="real_volume">Real volume</string>
    <string name="enter_volume">Enter Volume</string>
    <string name="_700">700</string>
    <string name="_800">800</string>
    <string name="expected_volume_is">Expected volume is</string>
    <string name="textview">TextView</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="checkfuel">CheckFuel</string>
    <string name="loading">Loading…</string>
    <string name="todo">To do</string>
    <string name="logo">LOGO</string>
    <string name="you_had_successful_refueling">You had successful refueling</string>
    <string name="have_a_good_trip">Have a good trip!</string>
    <string name="good_fuel">good fuel</string>
    <string name="go_back">go back</string>
    <string name="bad_result">bad result</string>
    <string name="settings">Settings</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up">sign up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="key">Key</string>
    <string name="person">Person</string>
    <string name="fuel_is_good">Fuel is good</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="sign_in">sign in</string>
    <string name="please_login">Please login</string>
    <string name="remember_password">Remember password</string>
    <string name="turn_on">turn on</string>
    <string name="ignore">ignore</string>
    <string name="nothing">nothing</string>
    <string name="wi_fi_connection">Wi-Fi Connection</string>
    <string name="there_s_no">There\'s no</string>
    <string name="no_wi_fi_connection_sign">No Wi-Fi connection sign</string>
    <string name="title_activity_test">test</string>
    <string name="action_settings">Settings</string>
    <string name="gas_station_okko">Gas station Okko</string>
    <string name="gas_station_wog">Gas station Wog</string>
    <string name="gas_station_ukrnafta">Gas station Ukrnafta</string>
    <string name="gas_station_shell">Gas station Shell</string>
    <string name="gas_station_socar">Gas station Socar</string>
    <string name="gas_station_upg">Gas station UPG</string>
    <string name="options">Options</string>
    <string name="right_arrow">Right arrow</string>
    <string name="bluetooth_connection">bluetooth connection</string>
    <string name="user">user</string>
    <string name="refill_station_icon">Refill station icon</string>
    <string name="car_icon">Car icon</string>
    <string name="quality_score_icon">Quality score icon</string>
    <string name="statistic_icon">Statistic icon</string>
    <string name="user_name">User name</string>
    <string name="user_avatar">User avatar</string>
    <string name="change_my_username">Change my username</string>
    <string name="change_my_password">Change my password</string>
    <string name="user_icon">User icon</string>
    <string name="theme_icon">Theme icon</string>
    <string name="language_icon">Language icon</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="alert">Alert</string>
    <string name="plus_icon">Plus icon</string>
    <string name="add_device">Add device</string>
    <string name="test_fuel_with_your_car">Test fuel with your car</string>
    <string name="warning">Warning</string>
    <string name="more">More</string>
    <string name="logout">Logout</string>
    <string name="english">English</string>
    <string name="light">Light</string>
    <string name="date">Date</string>
    <string name="from_newest_to_last">(from newest to last)</string>
    <string name="Dolyto">: Долито</string>
    <string name="devanostopyat">: 95</string>
    <string name="wog_shell">: WOG, Shell</string>
    <string name="sort">Sort</string>
    <string name="normalna">В нормі</string>
    <string name="normalnaa">: В нормі</string>
    <string name="italic_text_for_gas_station_info"><i>Italic text</i></string>
    <string name="name_bold_text_for_gas_station_info"><b>АЗС Укрнафта</b></string>
    <string name="date_underlined_text_for_gas_station_info"><u>25.02.2020</u></string>
    <string name="adress_bold_text_for_gas_station_info">Volodymyra Velykogo Street, 6,</string>
    <string name="adress_more_bold_text_for_gas_station_info">Lviv, Lviv Oblast, 79000</string>
    <string name="density_bold_text_for_gas_station_info"><b>760</b>kg/m3</string>
    <string name="refueling_bold_text_for_gas_station_info"><b>44.9</b>L/<b>45</b>L</string>
    <string name="days_bold_text_for_gas_station_info"><b>20</b>days</string>
    <string name="liters_all_bold_text_for_gas_station_info"><b>45</b>L</string>
    <string name="liters_bold_text_for_gas_station_info"><b>45</b>L</string>
    <string name="volume_consumed">Volume consumed</string>
    <string name="refueling_on_this_gas_station">Refueling on this gas station</string>
    <string name="density">Density</string>
    <string name="current_use">Current Use</string>
    <string name="the_avarage_consumption_of_your_fuel_is">The avarage consumption of your fuel is</string>
    <string name="we_assume_that_your_fuel_will_be_enough_for_another">We assume that your fuel will be enough for another</string>
    <string name="how_mach_you_have_fuel">How mach you have fuel</string>
    <string name="km_for_this_day">Km for this day</string>
    <string name="gas_station">Gas Station</string>
    <string name="typ_of_fuel">type of Fuel</string>
    <string name="volume">Volume</string>
    <string name="by">By</string>
    <string name="sort_sign">Sort Sign</string>
    <string name="Filter_sign">Filter sign</string>
    <string name="remove_all_filters">Remove all filters</string>
    <string name="filter">Filter</string>
    <string name="log_out">log out</string>
    <string name="filter_date">Date</string>
    <string name="filter_date_type_1">(from newest to last)</string>
    <string name="filter_date_type_2">(from last to newest)</string>
    <string name="filter_Volume">Volume</string>
    <string name="filter_Volume_type_1">(from bigger to smaller)</string>
    <string name="filter_Volume_type_2">(from smaller to bigger)</string>
    <string name="filter_Efficiency">Efficiency</string>
    <string name="filter_Efficiency_type_1">(from best to worst)</string>
    <string name="filter_Efficiency_type_2">(from worst to best)</string>
    <string name="sort_by">Sort By</string>
    <string name="traveled_distance">Traveled distance</string>
    <string name="days_in_use">Days in use</string>
    <string name="refueling_day">Refueling day</string>
    <string name="traveled_distance1">Traveled\ndistance</string>
    <string name="volume_consumed1">Volume\nconsumed</string>
    <string name="user_settings">User Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_test_fuel_with_your_car">TestFuelWithYourCar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="minimum_weight">Minimum weight</string>
    <string name="your_speed_should">Your speed should be at least 70km/h</string>
    <string name="instruction">Instruction</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="find_a_smooth_strech">Find a smooth strech of road where you can drive without sudden changes in speed</string>
    <string name="go_the_same_way_back">Go the same way back</string>
    <string name="drive_at_least_1_km">Drive at least 1 km</string>
    <string name="info_test_running_first">You\'re just started testing fuel with your car</string>
    <string name="info_test_running_second">You\'re just traveled more then 1 km\n You can drive back</string>
    <string name="info_test_running_third">You\'re just started driving back</string>
    <string name="device_1">Device 1</string>
    <string name="available_devices">Available devices</string>
    <string name="turn_on_bluetooth">Turn on bluetooth</string>
    <string name="filters">Filters</string>
    <string name="exit">Exit</string>
    <string name="successfully_saved">Your data is successfully saved</string>
    <string name="good">Good</string>

</resources>
