<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/changePassword"
            android:icon="@drawable/purple_key"
            android:title="@string/change_my_password" />
        <item
            android:id="@+id/changeUsername"
            android:icon="@drawable/purple_user"
            android:title="@string/change_my_username" />
    </group>

    <item android:title="User Settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/language"
                    android:icon="@drawable/wifi_disconnection_white"
                    android:title="@string/language" />
                <item
                    android:id="@+id/theme"
                    android:icon="@drawable/wifi_disconnection_white"
                    android:title="@string/theme" />


            </group>
        </menu>
    </item>

    <item android:title="AnotherTitle">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/addDevice"
                    android:icon="@drawable/wifi_disconnection_white"
                    android:title="@string/add_device" />
                <item
                    android:id="@+id/test"
                    android:icon="@drawable/wifi_disconnection_white"
                    android:title="@string/test_fuel_with_your_car" />
                <item
                    android:id="@+id/warning"
                    android:icon="@drawable/wifi_disconnection_white"
                    android:title="@string/warning" />


            </group>
        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/logout"
            android:title="@string/log_out" />
    </group>
</menu>