<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/filter_info_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/filter_info_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="150dp"
            android:text="@string/gas_station"
            android:textColor="#9176FF"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="180dp"
            android:text="@string/typ_of_fuel"
            android:textColor="#9176FF"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="210dp"
            android:text="@string/volume"
            android:textColor="#9176FF"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="240dp"
            android:text="@string/density"
            android:textColor="#9176FF"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="240dp"
            android:text="@string/normalnaa"
            android:textColor="#B2B2B2"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="500dp"
            android:text="@string/by"
            android:textColor="#B2B2B2"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="500dp"
            android:text="@string/date"
            android:textColor="#9176FF"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="115dp"
            android:layout_marginTop="500dp"
            android:text="@string/from_newest_to_last"
            android:textColor="#B2B2B2"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="210dp"
            android:text="@string/Dolyto"
            android:textColor="#B2B2B2"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="142dp"
            android:layout_marginTop="180dp"
            android:text="@string/devanostopyat"
            android:textColor="#B2B2B2"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="152dp"
            android:layout_marginTop="150dp"
            android:text="@string/wog_shell"
            android:textColor="#B2B2B2"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="400dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/sort_sign"
            app:srcCompat="@drawable/purple_sorting" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/Filter_sign"
            app:srcCompat="@drawable/purple_filter" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="365dp"
            android:background="#5C5B5B" />

        <Button
            android:id="@+id/button3"
            android:layout_width="280dp"
            android:layout_height="44dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="290dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/turn_on_button"
            android:shadowColor="#FFFFFF"
            android:text="@string/remove_all_filters"
            android:textAllCaps="false"
            android:textColor="#FFFFFFFF"
            android:textSize="22sp"
            android:textStyle="normal"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="55dp"
            android:layout_toEndOf="@id/imageView5"
            android:text="@string/filter"
            android:textColor="#B2B2B2"
            android:textSize="44sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="400dp"
            android:layout_toEndOf="@id/imageView7"
            android:text="@string/sort"
            android:textColor="#B2B2B2"
            android:textSize="44sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>