<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="135dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/user_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="#9176FF"
            android:textSize="24sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/maven_pro"
            android:text="@string/email"
            android:textColor="#9176FF" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/user_avatar"
            android:src="@drawable/icons8_male_user_96" />
    </RelativeLayout>

</LinearLayout>

